Se incluye swagger y se crea la API para las fases 1 y 2